# KeeManager

./: README.md
KeeManager/: .gitignore  .taurignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
KeeManager/src/: global.css  reactiveStores.ts  routes.js
KeeManager/src-tauri/: Cargo.toml  tauri.conf.json
KeeManager/src-tauri/capabilities/: default.json
KeeManager/src-tauri/src/: config.rs  database.rs  encode.rs  encryption.rs  entry.rs  hash.rs  key_derivation.rs  main.rs
KeeManager/src/components/: Entries.svelte  Sidebar.svelte
KeeManager/src/components/AddEntryModals/: AddCreditCardModal.svelte  AddIdentityModal.svelte  AddLoginModal.svelte  AddNoteModal.svelte  DirectingModal.svelte
KeeManager/src/components/EntryDetail/: CardDetail.svelte  IdentityDetail.svelte  LoginDetail.svelte  NoteDetail.svelte
KeeManager/src/routes/: +layout.ts  +page.svelte  CreateDatabase.svelte  Main.svelte  SelectDatabase.svelte
