[package]
name = "KeeManager"
version = "0.1.0"
description = "Password Manager"
authors = ["Malik Muhammed"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
digest = "0.10.7"
sha2 = "0.10.8"
base64 = "0.22.1"
pbkdf2 = "0.12.2"
aes-gcm = "0.10.3"
hmac = "0.12.1"
rand = "0.8.5"
once_cell = "1.19.0"
rusqlite = { version = "0.32.0", features = ["bundled"]  }

directories = "5.0.1"
tauri-plugin-dialog = "2.0.0-beta.11"
chrono = "0.4.38"
tauri-plugin-clipboard-manager = "2.1.0-beta.7"
enigo = "0.2.1"
windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

